--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ Flask==3.0.3
 Flask-Cors==5.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+llvmlite==0.43.0
 MarkupSafe==2.1.5
-numpy==2.1.1
+numba==0.60.0
+numpy==2.0.2
 pillow==10.4.0
 Werkzeug==3.0.4
