--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "gh-pages": "^6.1.1",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
